--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,6 +12,7 @@ body {
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+    border: 2px solid black
 }
 
 @media screen and (min-width: 992px) {
