--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,7 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    border: 1px solid black
 }
 
 .pokemon .number {
@@ -141,9 +142,22 @@
     margin: .25rem 0;
     font-size: .625rem;
     color: #fff;
-    background-color: #6c79db;
+    background-color: #202c8b;
     border: none;
-    border-radius: 1rem;
+    border-radius: 20%;
+}
+.abilities{
+    display:flex;
+    flex-direction: column;
+    justify-content: left;
+    list-style: none;
+    text-transform: capitalize;
+    font-family: 'Roboto', sans-serif; 
+}
+.ability{ 
+    color:white;
+    display: flex;
+    justify-content: center;
 }
 
 @media screen and (min-width: 380px) {
